Fix 1805 Default collapsed Menu in Admin Section

--- a/frontend/app/styles/partials/admin.scss
+++ b/frontend/app/styles/partials/admin.scss
@@ -36,3 +36,21 @@ p.margin-remove {
 .permissions {
   overflow-x: scroll;
 }
+
+
+
+@media screen and (min-width: 767px) {
+  .th.list.icon
+  {
+    display:none;
+  }
+  
+}
+@media screen and (max-width: 767px)
+{
+  .tabbedlist
+  {
+    display: none
+  }
+}
+  
